bf RDM-1150 Fix sonar code smells
https://jira.i-novus.ru/browse/RDM-1150